<resources>
    <string name="app_name">2dFarming</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="quantity">Quantità:</string>
    <string name="coinSecond">Coin/s:</string>
    <string name="levelItem">Livello:</string>
    <string name="buttonLevel">Livella</string>
    <string name="buttonFarming">Farma</string>
    <string name="coin">Coin:</string>
    <string name="defaultValue">0</string>
    <string name="maxName">ABCDEFGH</string>
    <string name="google_maps_key">bho</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>